# ArgoAI

./: .gitignore  Dockerfile.agent  Dockerfile.server  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  setup-demo.sh
agent/: __init__.py  engine.py  main.py  metrics.py
agent/agents/: __init__.py  base.py  config_agent.py  network_agent.py  prompts.py  rbac_agent.py  router.py  runtime_agent.py  storage_agent.py
agent/rag/: __init__.py  chunker.py  retriever.py
agent/tests/: __init__.py  test_cache_fingerprint.py  test_demo_diagnosis.py  test_log_filter.py  test_rag_tools.py
agent/tools/: __init__.py  k8s_tools.py  rag_tools.py
cmd/server/: main.go
config/deploy/: go-service.yaml  kustomization.yaml  llm-keys-secret.yaml  namespace.yaml  python-service.yaml  servicemonitor.yaml
config/monitoring/: grafana-dashboard.json
console-plugin/: .eslintrc.cjs  console-extensions.json  package.json  plugin-metadata.ts  start-console.sh  tsconfig.json  tsconfig.webpack.json  webpack.config.ts
demo/: cleanup.sh  deploy-all.sh
demo/crashloop/: deployment.yaml
demo/imagepull/: deployment.yaml
demo/missing-config/: deployment.yaml
demo/network-issue/: deployment.yaml
demo/oomkilled/: deployment.yaml
demo/rbac-issue/: deployment.yaml
demo/storage-issue/: deployment.yaml
docs/: OBSERVABILITY.md
internal/api/: handler.go
internal/health/: health.go
internal/k8s/: handler.go  handler_test.go
internal/metrics/: metrics.go
internal/secrets/: secrets.go  (+1 more)
scripts/: live_rag_tool_provider_check.py
(+5 files in other folders)
